--- a/assets/css/menu/menu__link.css
+++ b/assets/css/menu/menu__link.css
@@ -3,6 +3,7 @@
     margin-right: 1.25rem;
     text-decoration: none;
     text-transform: lowercase;
+    font-size: 1.15em;
 }
 
 .menu__link.active {
