--- a/assets/css/about/about.css
+++ b/assets/css/about/about.css
@@ -1,4 +1,15 @@
 .about {
-    padding: 2.5rem;
     text-align: center;
+}
+
+@media screen and (min-width: 0px) {
+    .about  {
+        padding: 2.5rem 1rem;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .about  {
+        padding: 2.5rem;
+    }
 }
