--- a/assets/css/about/about__description.css
+++ b/assets/css/about/about__description.css
@@ -1,5 +1,16 @@
 .about__description {
     color: #595959;
-    font-size: 1.50rem;
     font-weight: 100;
+}
+
+@media screen and (min-width: 0px) {
+    .about__description  {
+        font-size: 1.2rem;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .about__description  {
+        font-size: 1.50rem;
+    }
 }
