--- a/assets/css/about/about__title.css
+++ b/assets/css/about/about__title.css
@@ -1,5 +1,16 @@
 .about__title {
     color: #C81D25;
     font-family: Pacifico, cursive;
-    font-size: 2.75rem;
+}
+
+@media screen and (min-width: 0px) {
+    .about__title  {
+        font-size: 1.75rem;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .about__title  {
+        font-size: 2.75rem;
+    }
 }
