--- a/assets/css/berries/berries.css
+++ b/assets/css/berries/berries.css
@@ -2,5 +2,22 @@
     background-color: #e5e5e5;
     display: flex;
     flex-wrap: wrap;
-    padding: 5rem 0 0 5rem;
+}
+
+@media screen and (min-width: 0px) {
+    .berries {
+        padding: 5rem 0 0 1rem;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .berries {
+        padding: 5rem 0 0 2.5rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .berries {
+        padding: 5rem 0 0 5rem;
+    }
 }
