--- a/assets/css/berries/berry.css
+++ b/assets/css/berries/berry.css
@@ -3,7 +3,25 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5rem;
-    margin-right: 5rem;
-    width:calc(25% - 5rem);
-    
+}
+
+@media screen and (min-width: 0px) {
+    .berry {
+        width: 100%;
+        margin-right: 1rem;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .berry {
+        margin-right: 2.5rem;
+        width: calc(33.33% - 2.5rem)
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .berry {
+        margin-right: 5rem;
+        width:calc(25% - 5rem);
+    }
 }
